<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityReserva"
    android:background="@color/todo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/reserva"
        android:paddingBottom="25dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"

            android:layout_marginBottom="10dp"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"

            />

        <EditText
            android:id="@+id/et_apellido"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"

            />

    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="300dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/reserva"
            android:layout_marginHorizontal="40dp"


            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reservacion"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"

                />


            <Spinner
                android:id="@+id/spinner_reserva"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

            />


        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:orientation="vertical"
        android:layout_marginTop="400dp"
        android:background="@drawable/btn_reservar"
        >

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/btn_reserva"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_confirmar"
            android:textSize="20dp"


            />

    </LinearLayout>









</RelativeLayout>